getjobs
~~~~~~~
Version 1.1
* copy log file
Version 1.2
* warn about case sensitive and don't make directory if not found

Version 1.0
* Initial version

joblist
~~~~~~~
Version 1.4
* More help info
* For NRAO-DiFX 1.1

Version 1.3
* Support full generic format types

Version 1.2
* Initial version

job2difx
~~~~~~~~
Version 1.10
* more complete removal of old files if ovewrwriting previous job2difx run
* put DIFX VERSION in .calc file
* version for NRAO-DiFX 1.1

Version 1.9
* new (defaut) option for multiple configurations -- multiple passes
* some clean-up

Version 1.8
* put shelf location in .calc
* delete possibly existing .threads .machines .uvw .delay .rate files

Version 1.7
* scale nchan by oversamp factor
* allow visbufferlength to be overridden.  default now 32
* combine multiple subjobs into one in job2difx (does not work on subarrays)
* change to 0.5 seconds of data default

Version 1.6
* Support change in difx input file format.

Version 1.5
* Produce .input files with multiple configs
* fix bug in merging -- files with multiple formats

Version 1.4
* Support(i.e. generate) full generic format types
* Allow .fx files without all listed antennas to work
* Fix nant>10 problem
* Copy spacecraft table

Version 1.3
* .flag file updates 

Version 1.2
* allmachines target
* TSYS=0.0 to drive non-scaled output

Version 1.1
* Restrict max num of EOP to 5 since calcif balks with more

Version 1.0
* Initial version

jobstatus
~~~~~~~~~
Version 1.0
* Initial version

calcif2
~~~~~~~
Version 0.2
* by default zero negative delays

Version 0.1
* complete rewrite of calcif.  Differences from calcif:
  - generates polynomial model by default
  - corrects for aberration by default
  - allows any mount type
  - much improved integration with difxio library

calcif
~~~~~~
Version 1.5
* allow -a for globbing all .calc files or a list of files.
* don't rerun if unnecessary, unless -f is used
* generate files in /tmp and move when complete to prevent partial files
