@@ -1,0 +1,104 @@
+#!/usr/bin/env python
+
+from sys import argv, exit
+from os import popen, system
+from string import strip, split, find, lower
+
+program = 'difxsniff'
+version = '1.0'
+verdate = '20071218'
+author  = 'Walter Brisken'
+
+def run(pgm, args):
+	print pgm
+	p = popen(pgm, 'w')
+	for a in args:
+		p.write('%s\n' % a)
+	p.close()
+
+def usage():
+	print '\n%s ver. %s   %s %s' % (program, version, verdate, author)
+	print '\nA program to "sniff" FITS files made by DiFX\n'
+	print 'Usage: ./difxsniff [options] <refants> <file1> [<file2> [...] ]'
+	print '\nOptions can include:'
+	print '  -h or --help : print this info and quit.'
+	print '  Number of channels : e.g.  nchan=32 [default 16]'	
+	print '  Number of records  : e.g.  nrec=32  [default 16]\n'	
+	print 'refants is a comma separated list of antennas to use as refants\n'
+	print 'each "file" is a FITS file made by difx2fits\n'
+
+
+def sniff(files, refant, nrec, nchan):
+	system('rm -f summary wtsfile.lis.sum xcbandfile.lis wtsfile.lis logfile.lis datafile.lis xcbandmax.ps xcbandfile.ps wtsfile.ps apdfile.ps apd.delays acbandsum.ps acbandfile.lis')
+
+	filebase = ['log', 'wts', 'acband', 'xcband', 'data']
+	nf = len(filebase)
+	outlists = ['']*nf
+	n = 0
+	for f in files:
+		cmd = 'FITSsniffer %s %s ALL %d %d 1 1 > /dev/null' % (f,refant,nrec,nchan)
+		print cmd
+		system(cmd)
+		for i in range(nf):
+			a = filebase[i]+'file.lis'
+			b = '/tmp/%sfile.lis.%d' % (filebase[i], n)
+			cmd = 'mv %s %s' % (a, b)
+			print cmd
+			system(cmd)
+			outlists[i]+=(' '+b)
+		n = n+1
+	for i in range(nf):
+		cmd = 'cat%s > %sfile.lis' % (outlists[i], filebase[i])
+		print cmd
+		system(cmd)
+		cmd = 'rm%s' % outlists[i]
+		print cmd
+		system(cmd)
+		
+	run('plotwt',  ['wtsfile.lis', 'wtsfile.ps/vps'])
+	run('plotbp',  ['xcbandfile.lis', 'xcbandfile.ps/vps', ''])
+	run('plotbp',  ['acbandfile.lis', 'acbandfile.ps/vps', ''])
+	run('plotapd', ['datafile.lis', 'apdfile.ps/vps', 'ALL', 'ALL'])
+	cmd = 'lister'
+	system(cmd)
+	sdir = 'sniffer/%s' % refant
+	cmd = 'mkdir -p %s' % sdir
+	system(cmd)
+	cmd = 'mv xcband* wtsfile.* logfile.lis datafile.lis acband* summary apd* %s' % sdir
+	system(cmd)
+
+
+#############################
+
+refant = ''
+files = []
+nrec = 16
+nchan = 16
+
+for arg in argv[1:]:
+	kv = split(arg, '=')
+	if len(kv) == 2:
+		if lower(kv[0]) == 'nrec':
+			nrec = int(kv[1])
+		elif lower(kv[0]) == 'nchan':
+			nchan = int(kv[1])
+	elif len(kv) == 1:
+		if refant == '':
+			refant = arg
+		else:
+			files.append(arg)
+	else:
+		print 'What is %s?' % arg
+		exit(0)
+
+if len(files) < 1:
+	usage()
+else:
+	refants = split(refant, ',')
+	for ra in refants:
+		if len(ra) > 2:
+			print '%s is not an antenna name!' % refant
+			exit(0)
+
+	for ra in refants:
+		sniff(files, ra, nrec, nchan)
